--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -17,17 +17,16 @@
 <body>
 <div class="container">
     <div class="py-5 text-center">
-        <h2>회원 가입</h2>
+        <h2>로그인</h2>
     </div>
-    <h4 class="mb-3">회원 정보 입력</h4>
-    <form action="" th:action th:object="${member}" method="post">
+    <form action="item.html" th:action th:object="${loginForm}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                th:text="${err}">전체 오류 메시지</p>
         </div>
         <div>
             <label for="loginId">로그인 ID</label>
-            <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
+            <input type="text" id="loginId" th:field="*{loginId}" class="formcontrol"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{loginId}" />
         </div>
@@ -38,17 +37,11 @@
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{password}" />
         </div>
-        <div>
-            <label for="name">이름</label>
-            <input type="text" id="name" th:field="*{name}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{name}" />
-        </div>
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">회원
-                    가입</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">
+                    로그인</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
